k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    app: portfolio-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    app: portfolio-app
