k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: dev
  labels:
    app: portfolio-app
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
  namespace: prod
  labels:
    app: portfolio-app
spec:
  selector:
    app: portfolio-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      name: http
  type: ClusterIP
